--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,7 @@ button:hover {
     .container {
         width: 920px;
         height: 500px;
+        margin: 100px auto;
         display: flex;
         flex-direction: row;
         justify-content: center;
